feat(synthetic): fix orchestration typing and stabilize lab ui controllers

--- a/packages/app/recovery-cockpit-ui/package.json
+++ b/packages/app/recovery-cockpit-ui/package.json
@@ -33,10 +33,10 @@
     "react-dom": "^19.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@domain/recovery-cockpit-synthetic-lab": "workspace:*",
     "@domain/recovery-cockpit-constellation-core": "workspace:*",
     "@data/recovery-cockpit-constellation-store": "workspace:*",
-    "@service/recovery-cockpit-constellation-orchestrator": "workspace:*"
-    ,
+    "@service/recovery-cockpit-constellation-orchestrator": "workspace:*",
     "@domain/recovery-cockpit-cognitive-core": "workspace:*",
     "@service/recovery-cockpit-cognitive-orchestrator": "workspace:*",
     "@data/recovery-cockpit-cognitive-store": "workspace:*"
