--- a/packages/app/recovery-cockpit-ui/tsconfig.json
+++ b/packages/app/recovery-cockpit-ui/tsconfig.json
@@ -45,6 +45,9 @@
       "path": "./../../domain/recovery-cockpit-workloads/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-cockpit-synthetic-lab/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-cockpit-orchestration-core/tsconfig.json"
     },
     {
