--- a/packages/service/recovery-stress-lab-orchestrator/package.json
+++ b/packages/service/recovery-stress-lab-orchestrator/package.json
@@ -21,6 +21,7 @@
     "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/stress-lab-runtime": "workspace:*",
-    "@shared/result": "workspace:*"
+    "@shared/result": "workspace:*",
+    "@domain/recovery-stress-lab-intelligence": "workspace:*"
   }
 }
