feat: expand recovery stress lab with advanced TS and UI modules

--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -34,6 +34,7 @@
     "@domain/recovery-operations-control-plane": "workspace:*",
     "@service/recovery-horizon-orchestrator": "workspace:*",
     "@domain/recovery-horizon-engine": "workspace:*",
-    "@data/recovery-horizon-store": "workspace:*"
+    "@data/recovery-horizon-store": "workspace:*",
+    "@domain/recovery-stress-lab": "workspace:*"
   }
 }
