--- a/packages/app/adaptive-ops-console/tsconfig.json
+++ b/packages/app/adaptive-ops-console/tsconfig.json
@@ -64,6 +64,9 @@
     },
     {
       "path": "./../../domain/recovery-horizon-engine/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-stress-lab/tsconfig.json"
     }
   ]
 }
