feat(recovery): expand orchestration lab domain and React TSX telemetry surface

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -67,6 +67,12 @@
       "path": "../../service/recovery-cadence-coordinator/tsconfig.json"
     },
     {
+      "path": "../../domain/recovery-ops-orchestration-lab/tsconfig.json"
+    },
+    {
+      "path": "../../data/recovery-ops-orchestration-lab-store/tsconfig.json"
+    },
+    {
       "path": "../../service/recovery-command-control-hub/tsconfig.json"
     },
     {
