--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -36,6 +36,8 @@
     "@data/continuity-readiness-store": "workspace:*",
     "@service/continuity-readiness-orchestrator": "workspace:*",
     "@domain/recovery-continuity-readiness": "workspace:*",
+    "@domain/recovery-ops-orchestration-lab": "workspace:*",
+    "@data/recovery-ops-orchestration-lab-store": "workspace:*",
     "@shared/core": "workspace:*",
     "@shared/util": "workspace:*",
     "@shared/type-level": "workspace:*",
