feat(stream-dashboard): stabilize streaming CI pipeline types and compose advanced typed adapters

--- a/packages/app/stream-dashboard/package.json
+++ b/packages/app/stream-dashboard/package.json
@@ -17,8 +17,11 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@data/streaming-command-intelligence-store": "workspace:*",
     "@data/streaming-dashboard-store": "workspace:*",
+    "@domain/streaming-command-intelligence": "workspace:*",
     "@service/streaming-dashboard-orchestrator": "workspace:*",
+    "@service/streaming-command-intelligence-orchestrator": "workspace:*",
     "@service/recovery-stress-lab-orchestrator": "workspace:*",
     "@domain/recovery-stress-lab": "workspace:*",
     "@domain/streaming-observability": "workspace:*",
