--- a/packages/service/recovery-chaos-intelligence-orchestrator/package.json
+++ b/packages/service/recovery-chaos-intelligence-orchestrator/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@app/recovery-chaos-lab",
+  "name": "@service/recovery-chaos-intelligence-orchestrator",
   "version": "0.0.1",
   "private": true,
   "main": "dist/index.js",
@@ -8,23 +8,21 @@
     ".": "./src/index.ts",
     "./src": "./src/index.ts",
     "./*": "./src/*.ts",
-    "./src/*": "./src/*"
+    "./src/*": "./src/*/index.ts",
+    "./src/*/*": "./src/*/*"
   },
   "scripts": {
     "build": "tsc -b"
   },
   "dependencies": {
+    "@data/recovery-chaos-observability": "workspace:*",
+    "@data/incident-hub": "workspace:*",
     "@domain/recovery-chaos-lab": "workspace:*",
     "@service/recovery-chaos-orchestrator": "workspace:*",
-    "@service/recovery-chaos-intelligence-orchestrator": "workspace:*",
-    "@data/recovery-chaos-observability": "workspace:*",
     "@shared/result": "workspace:*",
-    "@shared/util": "workspace:*",
+    "@shared/core": "workspace:*",
     "@shared/type-level": "workspace:*",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@shared/util": "workspace:*",
     "zod": "^3.24.0"
   }
 }
