--- a/packages/service/recovery-chaos-intelligence-orchestrator/tsconfig.json
+++ b/packages/service/recovery-chaos-intelligence-orchestrator/tsconfig.json
@@ -3,17 +3,15 @@
   "compilerOptions": {
     "outDir": "./dist",
     "composite": true,
-    "declaration": true,
-    "jsx": "react-jsx",
-    "lib": [
-      "DOM",
-      "ES2023"
-    ]
+    "declaration": true
   },
   "include": [
     "src/**/*"
   ],
   "references": [
+    {
+      "path": "./../../data/recovery-chaos-observability/tsconfig.json"
+    },
     {
       "path": "./../../domain/recovery-chaos-lab/tsconfig.json"
     },
@@ -21,10 +19,7 @@
       "path": "./../../service/recovery-chaos-orchestrator/tsconfig.json"
     },
     {
-      "path": "./../../service/recovery-chaos-intelligence-orchestrator/tsconfig.json"
-    },
-    {
-      "path": "./../../data/recovery-chaos-observability/tsconfig.json"
+      "path": "./../../shared/core/tsconfig.json"
     },
     {
       "path": "./../../shared/result/tsconfig.json"
