--- a/packages/service/recovery-readiness-orchestrator/package.json
+++ b/packages/service/recovery-readiness-orchestrator/package.json
@@ -17,6 +17,7 @@
     "@domain/recovery-readiness": "workspace:*",
     "@data/recovery-readiness-store": "workspace:*",
     "@shared/result": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@aws-sdk/client-eventbridge": "^3.900.0",
     "@aws-sdk/client-sqs": "^3.900.0",
     "zod": "^3.24.0",
