--- a/packages/service/recovery-readiness-orchestrator/tsconfig.json
+++ b/packages/service/recovery-readiness-orchestrator/tsconfig.json
@@ -19,6 +19,9 @@
       "path": "./../../shared/result/tsconfig.json"
     },
     {
+      "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-readiness-simulation/tsconfig.json"
     }
   ]
