fix continuity lab type interoperability and workspace adapters

--- a/packages/service/recovery-runner/package.json
+++ b/packages/service/recovery-runner/package.json
@@ -21,6 +21,7 @@
     "@data/recovery-observability": "workspace:*",
     "@data/recovery-artifacts": "workspace:*",
     "@shared/core": "workspace:*",
+    "@data/recovery-workflow-store": "workspace:*",
     "@data/recovery-policy-store": "workspace:*",
     "@data/recovery-plan-store": "workspace:*",
     "@data/recovery-risk-store": "workspace:*",
