feat: expand recovery-lattice domain and orchestrator with modern TS runtime surfaces

--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -35,6 +35,8 @@
     "@service/recovery-horizon-orchestrator": "workspace:*",
     "@domain/recovery-horizon-engine": "workspace:*",
     "@data/recovery-horizon-store": "workspace:*",
-    "@domain/recovery-stress-lab": "workspace:*"
+    "@domain/recovery-stress-lab": "workspace:*",
+    "@service/recovery-lattice-orchestrator": "workspace:*",
+    "@domain/recovery-lattice": "workspace:*"
   }
 }
