feat(tsz): expand recovery stress-lab orchestration and typed React command center

--- a/packages/service/recovery-stress-lab-orchestrator/package.json
+++ b/packages/service/recovery-stress-lab-orchestrator/package.json
@@ -22,6 +22,7 @@
     "@shared/core": "workspace:*",
     "@shared/stress-lab-runtime": "workspace:*",
     "@shared/result": "workspace:*",
-    "@domain/recovery-stress-lab-intelligence": "workspace:*"
+    "@domain/recovery-stress-lab-intelligence": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
