--- a/packages/domain/recovery-stress-lab-intelligence/tsconfig.json
+++ b/packages/domain/recovery-stress-lab-intelligence/tsconfig.json
@@ -14,6 +14,9 @@
     },
     {
       "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/stress-lab-runtime/tsconfig.json"
     }
   ]
 }
