feat: expand orchestration kernel and recovery console quantum scenario workload

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -97,6 +97,9 @@
       "path": "../../shared/core/tsconfig.json"
     },
     {
+      "path": "../../shared/orchestration-kernel/tsconfig.json"
+    },
+    {
       "path": "../../shared/recovery-orchestration-runtime/tsconfig.json"
     },
     {
