--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -42,6 +42,7 @@
     "@shared/core": "workspace:*",
     "@shared/util": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/orchestration-kernel": "workspace:*",
     "@shared/recovery-orchestration-runtime": "workspace:*",
     "@domain/recovery-command-forge": "workspace:*",
     "@domain/incident-command-models": "workspace:*",
