--- a/packages/shared/orchestration-kernel/package.json
+++ b/packages/shared/orchestration-kernel/package.json
@@ -14,6 +14,8 @@
     "build": "tsc -b"
   },
   "dependencies": {
-    "@shared/core": "workspace:*"
+    "@shared/core": "workspace:*",
+    "@shared/type-level": "workspace:*",
+    "@shared/util": "workspace:*"
   }
 }
