--- a/packages/shared/orchestration-kernel/tsconfig.json
+++ b/packages/shared/orchestration-kernel/tsconfig.json
@@ -11,6 +11,12 @@
   "references": [
     {
       "path": "./../core/tsconfig.json"
+    },
+    {
+      "path": "./../type-level/tsconfig.json"
+    },
+    {
+      "path": "./../util/tsconfig.json"
     }
   ]
 }
