feat: expand recovery stress-lab orchestration domain and studio modules

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -130,6 +130,9 @@
       "path": "./../../data/recovery-readiness-store/tsconfig.json"
     },
     {
+      "path": "./../../data/recovery-stress-lab-orchestration-store/tsconfig.json"
+    },
+    {
       "path": "./../../data/recovery-simulation-metrics/tsconfig.json"
     },
     {
