--- a/packages/service/recovery-stress-lab-orchestrator/package.json
+++ b/packages/service/recovery-stress-lab-orchestrator/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@domain/recovery-stress-lab": "workspace:*",
     "@domain/recovery-incident-lab-core": "workspace:*",
+    "@data/recovery-stress-lab-orchestration-store": "workspace:*",
     "@data/recovery-incident-lab-store": "workspace:*",
     "@data/recovery-horizon-store": "workspace:*",
     "@shared/type-level": "workspace:*",
