--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -101,6 +101,7 @@
     "@domain/recovery-fabric-cadence-core": "workspace:*",
     "@domain/recovery-fusion-intelligence": "workspace:*",
     "@domain/recovery-stress-lab": "workspace:*",
+    "@data/recovery-stress-lab-orchestration-store": "workspace:*",
     "@service/recovery-stress-lab-orchestrator": "workspace:*",
     "@shared/incident-saga-core": "workspace:*",
     "@domain/recovery-incident-saga": "workspace:*",
