--- a/packages/service/recovery-stress-lab-orchestrator/tsconfig.json
+++ b/packages/service/recovery-stress-lab-orchestrator/tsconfig.json
@@ -25,6 +25,9 @@
       "path": "./../../domain/recovery-stress-lab-intelligence/tsconfig.json"
     },
     {
+      "path": "./../../data/recovery-stress-lab-orchestration-store/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-stress-lab/tsconfig.json"
     },
     {
