feat(stress-lab): expand orchestration core and stress lab modules

--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -42,6 +42,7 @@
     "@shared/core": "workspace:*",
     "@shared/util": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/orchestration-lab-core": "workspace:*",
     "@shared/orchestration-kernel": "workspace:*",
     "@shared/recovery-orchestration-runtime": "workspace:*",
     "@domain/recovery-command-forge": "workspace:*",
@@ -104,6 +105,7 @@
     "@data/recovery-stress-lab-orchestration-store": "workspace:*",
     "@service/recovery-stress-lab-orchestrator": "workspace:*",
     "@shared/incident-saga-core": "workspace:*",
+    "@domain/recovery-lab-stress-lab-core": "workspace:*",
     "@domain/recovery-incident-saga": "workspace:*",
     "@service/recovery-incident-saga-orchestrator": "workspace:*",
     "@domain/recovery-synthetic-orchestration": "workspace:*",
