--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -97,6 +97,9 @@
       "path": "../../shared/core/tsconfig.json"
     },
     {
+      "path": "../../shared/orchestration-lab-core/tsconfig.json"
+    },
+    {
       "path": "../../shared/orchestration-kernel/tsconfig.json"
     },
     {
@@ -176,6 +179,9 @@
     },
     {
       "path": "./../../domain/recovery-ops-playbook/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-lab-orchestration-core/tsconfig.json"
     },
     {
       "path": "./../../domain/recovery-orchestration-planning/tsconfig.json"
@@ -275,6 +281,9 @@
     },
     {
       "path": "./../../domain/recovery-orchestration-design/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-lab-stress-lab-core/tsconfig.json"
     }
   ]
 }
