--- a/packages/app/recovery-cockpit-ui/tsconfig.json
+++ b/packages/app/recovery-cockpit-ui/tsconfig.json
@@ -80,5 +80,9 @@
     {
       "path": "./../../service/recovery-cockpit-constellation-orchestrator/tsconfig.json"
     }
+    ,
+    {
+      "path": "./../../domain/recovery-stress-lab/tsconfig.json"
+    }
   ]
 }
