--- a/packages/domain/recovery-stress-lab/package.json
+++ b/packages/domain/recovery-stress-lab/package.json
@@ -20,6 +20,7 @@
     "@shared/type-level": "workspace:*",
     "@domain/recovery-lab-governance": "workspace:*",
     "zod": "^3.24.0",
-    "@domain/recovery-stress-lab-intelligence": "workspace:*"
+    "@domain/recovery-stress-lab-intelligence": "workspace:*",
+    "@aws-sdk/client-sfn": "^3.760.0"
   }
 }
