feat: expand recovery intent graph TS modules and workspace wiring

--- a/packages/app/recovery-incident-dashboard/package.json
+++ b/packages/app/recovery-incident-dashboard/package.json
@@ -73,6 +73,7 @@
     "@domain/recovery-horizon-engine": "workspace:*",
     "@data/recovery-horizon-store": "workspace:*",
     "@domain/recovery-horizon-studio-core": "workspace:*",
+    "@service/recovery-intent-graph-orchestrator": "workspace:*",
     "@shared/recovery-orchestration-runtime": "workspace:*"
   }
 }
