--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -35,6 +35,9 @@
       "path": "./../../service/recovery-readiness-orchestrator/tsconfig.json"
     },
     {
+      "path": "./../../service/recovery-intent-graph-orchestrator/tsconfig.json"
+    },
+    {
       "path": "./../../service/recovery-incident-command-orchestrator/tsconfig.json"
     },
     {
