Expand recovery quantum suite with typed orchestration runtime stack

--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -277,6 +277,12 @@
       "path": "./../../shared/incident-saga-core/tsconfig.json"
     },
     {
+      "path": "../../shared/typed-orchestration-core/tsconfig.json"
+    },
+    {
+      "path": "../../shared/orchestration-runtime/tsconfig.json"
+    },
+    {
       "path": "../../domain/recovery-readiness/tsconfig.json"
     },
     {
