--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -70,6 +70,8 @@
     "@service/recovery-signal-intelligence-orchestrator": "workspace:*",
     "@data/recovery-signal-intelligence-store": "workspace:*",
     "@domain/recovery-signal-intelligence": "workspace:*",
+    "@shared/typed-orchestration-core": "workspace:*",
+    "@shared/orchestration-runtime": "workspace:*",
     "@domain/recovery-playbooks": "workspace:*",
     "@service/recovery-playbook-engine": "workspace:*",
     "@service/recovery-ops-graph-orchestrator": "workspace:*",
