--- a/packages/app/recovery-lab-dashboard/tsconfig.json
+++ b/packages/app/recovery-lab-dashboard/tsconfig.json
@@ -15,6 +15,7 @@
   ],
   "references": [
     { "path": "./../../domain/recovery-simulation-lab-core/tsconfig.json" },
+    { "path": "./../../domain/recovery-orchestration-design/tsconfig.json" },
     { "path": "./../../data/recovery-lab-simulation-store/tsconfig.json" },
     { "path": "./../../service/recovery-lab-orchestrator/tsconfig.json" },
     { "path": "./../../shared/recovery-lab-kernel/tsconfig.json" },
