--- a/packages/domain/recovery-orchestration-design/package.json
+++ b/packages/domain/recovery-orchestration-design/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@shared/core": "workspace:*",
     "@shared/orchestration-kernel": "workspace:*",
+    "@shared/recovery-lab-kernel": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "zod": "^3.24.0"
   }
 }
