chore: stabilize convergence orchestration type mappings and payload contracts

--- a/packages/domain/recovery-ops-orchestration-lab/tsconfig.json
+++ b/packages/domain/recovery-ops-orchestration-lab/tsconfig.json
@@ -3,7 +3,11 @@
   "compilerOptions": {
     "outDir": "./dist",
     "composite": true,
-    "declaration": true
+    "declaration": true,
+    "lib": [
+      "ES2023",
+      "ESNext"
+    ]
   },
   "include": [
     "src/**/*"
@@ -11,6 +15,9 @@
   "references": [
     {
       "path": "./../../shared/core/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/result/tsconfig.json"
     },
     {
       "path": "./../../shared/type-level/tsconfig.json"
