--- a/packages/domain/recovery-ops-orchestration-lab/package.json
+++ b/packages/domain/recovery-ops-orchestration-lab/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/type-level": "workspace:*",
-    "@shared/core": "workspace:*"
+    "@shared/core": "workspace:*",
+    "zod": "^3.24.2"
   }
 }
