--- a/packages/app/recovery-timeline-studio/tsconfig.json
+++ b/packages/app/recovery-timeline-studio/tsconfig.json
@@ -37,6 +37,12 @@
     },
     {
       "path": "./../../shared/result/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/util/tsconfig.json"
     }
   ]
 }
