--- a/packages/service/recovery-timeline-orchestrator/package.json
+++ b/packages/service/recovery-timeline-orchestrator/package.json
@@ -17,6 +17,7 @@
     "@data/recovery-timeline-store": "workspace:*",
     "@domain/recovery-timeline": "workspace:*",
     "@shared/result": "workspace:*",
+    "@shared/type-level": "workspace:*",
     "@shared/core": "workspace:*",
     "zod": "^3.24.0"
   }
