feat: expand recovery intelligence domain and dashboard TS surfaces

--- a/packages/app/recovery-lab-dashboard/package.json
+++ b/packages/app/recovery-lab-dashboard/package.json
@@ -14,6 +14,7 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@domain/recovery-lab-intelligence-core": "workspace:*",
     "@domain/recovery-simulation-lab-core": "workspace:*",
     "@domain/recovery-orchestration-design": "workspace:*",
     "@data/recovery-lab-simulation-store": "workspace:*",
