--- a/packages/shared/orchestration-lab-core/package.json
+++ b/packages/shared/orchestration-lab-core/package.json
@@ -1,16 +1,22 @@
 {
   "name": "@shared/orchestration-lab-core",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": "./src/index.ts",
     "./src": "./src/index.ts",
-    "./*": "./src/*.ts",
+    "*": "./src/*.ts",
     "./src/*": "./src/*.ts"
   },
   "scripts": {
     "build": "tsc -b"
+  },
+  "dependencies": {
+    "@shared/stress-lab-runtime": "workspace:*",
+    "@shared/type-level": "workspace:*",
+    "@shared/core": "workspace:*",
+    "zod": "^3.24.0"
   }
 }
