feat: expand mesh control plane domain and cockpit stress modules

--- a/packages/app/recovery-cockpit-ui/tsconfig.json
+++ b/packages/app/recovery-cockpit-ui/tsconfig.json
@@ -86,6 +86,9 @@
     },
     {
       "path": "./../../shared/orchestration-lab-core/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/mesh-control-plane/tsconfig.json"
     }
   ]
 }
