--- a/packages/app/recovery-cockpit-ui/package.json
+++ b/packages/app/recovery-cockpit-ui/package.json
@@ -42,6 +42,7 @@
     "@service/recovery-cockpit-cognitive-orchestrator": "workspace:*",
     "@data/recovery-cockpit-cognitive-store": "workspace:*",
     "@shared/orchestration-lab-core": "workspace:*",
+    "@shared/mesh-control-plane": "workspace:*",
     "zod": "^3.24.0"
   }
 }
