feat(tsz): add recovery timeline orchestration domain and runtime stack

--- a/packages/app/recovery-timeline-studio/tsconfig.json
+++ b/packages/app/recovery-timeline-studio/tsconfig.json
@@ -39,10 +39,16 @@
       "path": "./../../shared/result/tsconfig.json"
     },
     {
+      "path": "./../../shared/timeline-orchestration-runtime/tsconfig.json"
+    },
+    {
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
       "path": "./../../shared/util/tsconfig.json"
+    },
+    {
+      "path": "./../../domain/recovery-timeline-orchestration/tsconfig.json"
     }
   ]
 }
