--- a/packages/app/recovery-console/package.json
+++ b/packages/app/recovery-console/package.json
@@ -110,6 +110,7 @@
     "@domain/recovery-lab-stress-lab-core": "workspace:*",
     "@domain/recovery-incident-saga": "workspace:*",
     "@service/recovery-incident-saga-orchestrator": "workspace:*",
+    "@domain/recovery-automation-orchestrator": "workspace:*",
     "@domain/recovery-synthetic-orchestration": "workspace:*",
     "@data/recovery-synthetic-orchestration-store": "workspace:*",
     "@service/recovery-synthetic-orchestrator": "workspace:*",
