--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -289,6 +289,9 @@
       "path": "./../../domain/recovery-orchestration-design/tsconfig.json"
     },
     {
+      "path": "./../../domain/recovery-automation-orchestrator/tsconfig.json"
+    },
+    {
       "path": "./../../domain/recovery-lab-stress-lab-core/tsconfig.json"
     }
   ]
